@@ -1,5 +1,9 @@
 requires 'perl', '5.008001';
 
+on 'recommends' => sub {
+    requires 'Text::Sass', '0.97';
+};
+
 on 'test' => sub {
     requires 'Test::More',           '0.98';
     requires 'Test::Name::FromLine', '0.10';
