@@ -1,6 +1,7 @@
 Revision history for Perl extension Text-Sass-XS
 
 {{$NEXT}}
+    - Adds Text::Sass compatible interface.
 
 0.05 2013-06-18T07:02:26Z
     - Fixes memory leaks.
